# polarect

./: CMakeLists.txt  README.txt  draw.cpp  draw.h  main.cpp  polarect.cpp  polarect.h  polarect_test.cpp
libImageIO/: CMakeLists.txt  image_drawing_test.cpp  image_io.cpp  image_io_test.cpp
libOrsa/: fundamental_model_test.cpp  model_estimator.cpp
libSplinter/: CMakeLists.txt  splinter.c
